@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: uuencode.test,v 1.9 2004/01/15 06:36:12 andreas_kupries Exp $
+# RCS: @(#) $Id: uuencode.test,v 1.10 2005/08/26 17:13:36 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 # Initialize the test package
@@ -34,22 +34,18 @@ if {[catch {source [file join [file dirname [info script]] uuencode.tcl]} msg]} 
 # Now the package specific tests....
 # -------------------------------------------------------------------------
 
+set trf 0
 if {[info command ::uuencode::CEncode] != {}} {
     puts "- uuencode [package provide uuencode] (critcl based)"
 } elseif {[package provide Trf] != {}} {
     puts "- uuencode [package provide uuencode] (Trf based)"
+    set trf 1
 } else {
     puts "- uuencode [package provide uuencode] (pure tcl)"
 }
 
 package require log
 log::lvSuppress notice
-
-if {[package provide Trf] == {}} {
-    puts "- uuencode [package provide uuencode] (pure Tcl)"
-} else {
-    puts "- uuencode [package provide uuencode] (Trf based)"
-}
 
 # -------------------------------------------------------------------------
 
@@ -74,7 +70,7 @@ test uuencode-1.3 {decode longer string} {
 } [string repeat x 102]
 
 # Trf uses a different padding character.
-if {[catch {package present Trf}]} {
+if {!$trf} {
     # critcl / pure tcl based
     set testdata {begin 644 data.dat
 75&AE(&-A="!S870@;VX@=&AE(&UA="X`
